# tei-scribe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  bun.lockb  package.json  vite.config.ts
docs/: UI_STANDARDS.md  user-guide.md
flatpak/: app.sagascribe.Sagascribe.ci.yml  app.sagascribe.Sagascribe.desktop  app.sagascribe.Sagascribe.metainfo.xml  app.sagascribe.Sagascribe.yml  build-flatpak.sh  prepare-flatpak.sh  saga-scribe-wrapper.sh
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/annotations/: mod.rs
src-tauri/src/commands/: dictionary.rs  entities.rs  file.rs  import.rs  metadata.rs  mod.rs  parse.rs  settings.rs  template.rs  validate.rs
src-tauri/src/dictionary/: inflections.rs  mod.rs  onp.rs
src-tauri/src/entities/: registry.rs
src-tauri/src/importer/: tei.rs  tests.rs
src-tauri/src/importer/tei/: dsl.rs  extraction.rs  helpers.rs  importer.rs  metadata.rs  mod.rs  patching.rs  segments.rs  test_hang.rs
src-tauri/src/metadata/: generator.rs  mod.rs  types.rs
src-tauri/src/normalizer/: dictionary.rs
src-tauri/src/parser/: ast.rs  compiler.rs  lexer.rs  mod.rs  tests.rs  wordtokenizer.rs
src-tauri/src/parser/compiler/: annotations.rs  base.rs  char_injection.rs  mod.rs  multi_level.rs  single_level.rs
src-tauri/src/settings/: manager.rs
src-tauri/src/stylesheet/: manager.rs
src-tauri/src/template/: manager.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/validator/: actor.rs  mod.rs  relaxng.rs  relaxng_tests.rs  types.rs  xsd.rs
(+57 files in other folders)
